--- a/style.css
+++ b/style.css
@@ -1,15 +1,48 @@
+body{
+    background-color: antiquewhite;
+}
+
 h1{
     font-size: 3rem;
     text-align: center;
     margin: 50px;
+    color: brown;
 }
 
 .validator{
     text-align: center;
     font-size: 2rem;
+    
 }
 
 .myInput, .btnValidate{
     font-size: 2rem;
+    border-radius: 10px;
 }
+
+.btnValidate{
+    background-color:olive;
+    color: white;
+}
+
+.btnValidate:hover{
+    cursor: pointer;
+    background-color:rgba(128, 128, 0, 0.516);    
+}
+
+.myInput{
+    background-color: whitesmoke;
+}
+
+
+@media (max-width: 820px) {
+    .validator{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;        
+    }
+}
+
 
